# qdrant-av-edgecase-memory

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: 01_create_collection.py  02_ingest_synthetic.py  03_query_examples.py  04_text_query.py
src/av_memory/: __init__.py  config.py  ingest.py  schema.py  search.py
src/av_memory/embeddings/: __init__.py  lidar.py  radar.py  text.py  vision.py
src/qdrant_av_edgecase_memory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
